2008-03-12  Ludovic Courtès  <ludo@gnu.org>

	* goops/describe.scm (describe): Provide `describe' (symbol),
	not `"describe"' (string).  Reported by David Pirotte
	<david@altosw.be>.

2005-03-24  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* accessors.scm, simple.scm: New files.

	* goops.scm (standard-define-class): Removed; Export
	define-class as standard-define-class.

2005-01-18  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* goops.scm (class-of): Changed from being re-exported to just
	being exported.

2004-02-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Makefile.am, goops/Makefile.am (TAGS_FILES): Use this variable
	instead of ETAGS_ARGS so that TAGS can be built using separate
	build directory.

2004-01-12  Marius Vollmer  <mvo@zagadka.de>

	* goops.scm (compute-get-n-set): Use '#:' in error message instead
	of ':'.  Thanks to Richard Todd!

2003-04-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getters-n-setters): Allow for primitive
	procedure thunks.  (Thanks to Neil W. Van Dyke.)

2003-04-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops/dispatch.scm (cache-hashval): Corrected termination
	condition for hashval computation.  (Previously, it made erroneous
	assumptions about the representation of environments; Thanks to
	Andreas Rottmann.)
	
2003-04-17  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getters-n-setters): Check for bad init-thunk.
	(eqv?): Added default method.
	(equal?): New default method which uses eqv?.

2003-04-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getter-method): For custom getter: Check
	boundness even if there is an init-thunk.  (The getter can return
	#<unbound> even if the slot has been set before.)
	(remove-class-accessors!): Also remove accessor-method from its
	accessor.

2003-04-13  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getters-n-setters/verify-accessors): Better